name:                password

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Password generator

-- A longer description of the package.
description:         Generates passwords for accounts from a master password.

-- The license under which the package is released.
license:             GPL-3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Trevor Bender

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          Trevor.Bender@gmail.com

-- A copyright notice.
-- copyright:           

category:            Cypto

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable password
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    OverloadedStrings
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.6 && <4.7
                     , aeson >=0.6 && <0.7
                     , text >=0.11 && <0.12
                     , bytestring >=0.10 && <0.11
                     , SHA >=1.6 && <1.7
                     , cipher-aes >=0.2 && <0.3
                     , base64-bytestring >=1.0 && <1.1
                     , crypto-api >=0.12 && <0.13
                     , containers >=0.5 && <0.6
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
